--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
-  <title>Cineflex</title>
+  <link rel="icon" type="image/x-icon" href="../src/assets/favicon.svg">
+  <title>CINEFLEX</title>
 </head>
 
 <body>
